[+] Redone the startup/session/shutdown sequences with plugins management